--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 amqp==2.6.0
 asgiref==3.2.7
 billiard==3.6.3.0
+braintree==4.1.0
 celery==4.4.5
+certifi==2020.4.5.2
+chardet==3.0.4
 Django==3.0.7
 flower==0.9.4
 future==0.18.2
 humanize==0.5.1
+idna==2.9
 importlib-metadata==1.6.1
 kombu==4.6.10
 Pillow==7.1.2
 pytz==2020.1
+requests==2.23.0
 sqlparse==0.3.1
 tornado==6.0.4
+urllib3==1.25.9
 vine==1.3.0
 zipp==3.1.0
