--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==3.0.4
 cssselect2==0.3.0
 defusedxml==0.6.0
 Django==3.0.7
+django-rosetta==0.9.4
 flower==0.9.4
 future==0.18.2
 html5lib==1.0.1
@@ -19,6 +20,7 @@ idna==2.9
 importlib-metadata==1.6.1
 kombu==4.6.10
 Pillow==7.1.2
+polib==1.1.0
 pycparser==2.20
 Pyphen==0.9.5
 pytz==2020.1
