--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ chardet==3.0.4
 cssselect2==0.3.0
 defusedxml==0.6.0
 Django==3.0.7
+django-parler==1.9.2
 django-rosetta==0.9.4
 flower==0.9.4
 future==0.18.2
